--- a/src/Sass/style.scss
+++ b/src/Sass/style.scss
@@ -26,13 +26,8 @@ a{
 @import '../component/Bannersec';
 @import '../component/Bannermid';
 @import '../component/BannerThird';
-@import '../Checkout/CheckOut';
-@import '../Checkout/GuestCheck';
-@import '../Checkout/PaymentCheck';
-@import '../Checkout/ReviewOrder';
-@import '../Checkout/Order';
-
-
+@import '../Checkout/CheckHome';
+@import '../PlaceOrder/Order';
 
 *{
     margin: 0;
@@ -40,4 +35,9 @@ a{
     box-sizing: border-box;
    
 }
-
+// body{
+//     padding-top: 80px;
+// }
+// #header{
+//     top: 0;
+// }
