--- a/src/ShoppingBag/_shoppingCart.scss
+++ b/src/ShoppingBag/_shoppingCart.scss
@@ -3,15 +3,17 @@
 
   .summary{
     
-    border: 1px solid grey;
+   
     margin: auto;
     text-align: left;
+    box-shadow: 0px 0px 8px #0000000D;
+    border: 1px solid #D1D3D6;
 
  }
  .shopCart{
   @extend .display-l-36-;
  }
- 
+
  
      .shop-head {
          text-align: center;
@@ -123,7 +125,21 @@
      }
 
 
+     .shopbagbutton{
+@extend .regular-body-s-14-;
+      color: white;
+      width: 14rem;
+      height: 3rem;
+     
+      border: 2px solid #FFFFFF;
+      border-radius: 10px;
+      text-transform: uppercase;
+      
+      background-color:#1363DF;
+      
+      margin-bottom: 1em;
 
+     }
 
       .accordion {
         padding: auto;
