--- a/src/component/_BannerNew.scss
+++ b/src/component/_BannerNew.scss
@@ -1,51 +1,141 @@
-.banner-new{
-    background-color: #00000033;
-    text-align: left;
-    .chevron-Left{
-       margin-left: 14rem;
-    }
+// .banner-new{
+//     background-color: #00000033;
+//     text-align: left;
+//     .chevron-Left{
+//        margin-left: 10rem;
+//        p{
+//         @extend .regualr-body-m-16-;
+//         line-height: 26px;
+//         margin: 0.5rem 0 1.5rem;
+//        }
 
-.banner-newfirst{
+//        h1{
+//         @extend .display-xl-48-dekstop-only;
+       
+//     }
+//     }
+
+// .banner-newfirst{
    
   
-        /* position: absolute; */
-        padding-top: 7em;
-        padding-bottom: 7em;
+   
+//         padding-top: 7em;
+//         padding-bottom: 7em;
 
  
-    h1{
-        @extend .display-xl-48-dekstop-only;
-       
-    }
+   
 
-    p{
-        @extend .regular-heading-m-16-;
-        line-height: 26px;
-       margin: 0.5rem 0 1.5rem;
-    }
-    .shop-btn{
-        @extend .regular-heading-s-14-;
-        color: white;
-        background-color: $primary-brand;
-        border: none;
-        width: 14rem;
-        padding: 0.5em 0 0.5em 0;
-        border-radius: 0.5em;
-        margin: 0.5rem 0 1.5rem;
-       
-       }
-       .chevron-L img {
+//     .shop-btn{
+//         @extend .regular-heading-s-14-;
+//         color: white;
+//         background-color: $primary-brand;
+//         border: none;
+//         width: 15rem;
+//         padding: 1em;
+//         border-radius: 10px;
+//         margin: 0.5rem 0 1.5rem;
+//         font-weight: bold;
+//        }
+//        .chevron-L img {
            
-    position: relative;
-    top: 9rem;
-        height: 2.25rem;
-        width: 1.25rem;
-       }
-    }
-}
+//     position: relative;
+//     top: 9rem;
+//         height: 2.25rem;
+//         width: 1.25rem;
+//         margin-left: 3rem;
+//        }
+//     }
+// }
+// .ThreeDotsWrapper{
+//     display: none;
+// }
+// .banner-new{
+//     img{
+//             object-fit: cover;
+//             width: 100%;
+//             max-height: 600px;
+//             object-position: 0px -190px;
+//     }
+// }
 
-.banner-new{
-    img{
-        width: 100%;
+.homeBanner {
+    display: flex;
+
+
+    .homeInnerBanner {
+        display: flex;
+        width: 50%;
+
+
+        text-align: center;
+
+        color: black;
+        padding: 0;
+        // flex: 2;
+        background-color: #e5e5e7;
+        padding: 0 2em;
+
+        div {
+            display: flex;
+
+            align-items: flex-start;
+            justify-content: center;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 1em 0;
+
+            h2 {
+                @extend .display-l-36-;
+                width: 60%;
+                text-align: start;
+            }
+
+            p {
+                padding: 1em 0;
+                text-align: start;
+            }
+
+            button {
+
+                @extend .regular-heading-s-14-;
+                        color: white;
+                        background-color: $primary-brand;
+                        border: none;
+                        width: 15rem;
+                        padding: 1em;
+                        border-radius: 10px;
+                        margin: 0.5rem 0 1.5rem;
+                        font-weight: bold;
+                color: $white;
+            }
+
+            .homeBannerImg {
+                background-image: url(../Assets/banner-f.png);
+
+
+            }
+
+            .ThreeDotsWrapper {
+                display: none;
+            }
+        }
+
+        img {
+            width: 0.75em;
+            padding: 1em;
+        }
+
     }
+
+
+    .homeImage {
+        // flex: 2;
+        width: 50%;
+        height: 25rem;
+        object-fit: cover;
+        object-position: 15% 30%;
+
+    }
+
+
 }
