--- a/src/component/_BannerThird.scss
+++ b/src/component/_BannerThird.scss
@@ -1,15 +1,21 @@
 .banner1{
     display: flex;
-    // padding: 1em;
+
 
 
     img
     {
        padding: 1rem  0px;
        flex: 2;
-      
+       object-fit: cover;
+       max-width: 100%;
+       width: 550px;
+       height: 400px;      
         
     }
+}
+.breath{
+  height: 20%;
 }
 .banner1-left
 {
@@ -17,8 +23,11 @@
     position: relative;
     text-align: center;
     color: white;
-    
-    padding: 1em 1em 1em 1em;
+    width: 554px;
+    height: 432px;
+    max-width: 100%;
+    object-fit: cover;
+    padding: 0.5em;
     flex: 1;
     background-color:#1B252C;
 
@@ -28,19 +37,14 @@
     p{
         @extend .display-s-20-;
     }
-  img{
-    position: relative;
-    right: 81%;
-    top: 26%;
-    width: 2.5rem;
-  }
+ 
   .shop-D {
     @extend .regular-heading-s-14-;
     color: white;
     background-color:#1B252C;
     border: 2px solid #FFFFFF;
     width: 14rem;
-    padding: 0.5em;
+    padding: 1em;
     border-radius: 0.75em;
     opacity: 100%;
   }
@@ -52,16 +56,133 @@
     @extend .display-xl-48-dekstop-only ;
     position: absolute;
     margin: auto;
-    height: 0.5rem;
-    
-    width: 10rem;
+   
     background-color:  $primary-brand;
-    // border-radius: 0.25rem;
+  
     right: 74%;
     transform: translateX(-50%);
-    bottom: 25%
+    bottom: 25%;
+    
 
 
 
 }
 
+.mapiconWrapper {
+  position: absolute;
+  left: 0%;
+  bottom: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+ margin-left: -1em;
+
+  .mapPinImg {
+      width: 14%;
+      margin-bottom: 0.75em;
+
+  }
+
+  .mapMaxHeaderImg {
+      width: 28%;
+      margin-left: -1em;
+
+  }
+
+}
+
+// .footerBanner {
+
+//   display: flex;
+//   flex-direction: row-reverse;
+//   margin: 3em auto 5em auto;
+
+
+
+//   img {
+
+//       width: calc(60% - 1rem);
+
+//   }
+
+
+
+//   .footerBannerInner {
+//       position: relative;
+//       background-color: black;
+//       padding: 2em 0;
+//       width: 40%;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//       flex-direction: column;
+
+
+
+
+
+//       h2 {
+//           @extend .display-l-36-;
+//           color: $white;
+//           text-align: center;
+//           padding: 0 !important;
+
+
+
+//       }
+
+//       p {
+//           @extend .regular-body-s-14-;
+//           color: $white;
+//           padding: 1em;
+//           // margin: 1em 0;
+
+//       }
+
+//       .shopDevicesBtn {
+
+        
+//           color: white;
+//           background: transparent;
+//           border: 1px solid white;
+//           display: flex;
+//           justify-content: start;
+
+//       }
+
+//       .mapiconWrapper {
+//           position: absolute;
+//           left: 0%;
+//           bottom: 10%;
+//           display: flex;
+//           flex-direction: column;
+//           align-items: flex-start;
+//          margin-left: -1em;
+
+//           .mapPinImg {
+//               width: 5%;
+//               margin-bottom: 0.75em;
+
+//           }
+
+//           .mapMaxHeaderImg {
+//               width: 20%;
+//               margin-left: -1em;
+
+//           }
+
+//       }
+
+
+//   }
+
+
+
+
+
+//   .standingMan {
+//       padding: 1em 0 1em 0;
+
+//   }
+
+// }
