--- a/src/component/_Bannermid.scss
+++ b/src/component/_Bannermid.scss
@@ -5,10 +5,10 @@
 .categories-main{
    
     position: relative;
-    left: 10em;
+    // left: 10em;
     background-color: white;
-    width: 80%;
-    top: -1em;
+    // width: 80%;
+    top: -2em;
    .banner-mid{
     padding-right: 1rem;
    }
@@ -18,7 +18,7 @@
 }
 .category-img img{
     width: 100%;
-    height: 250px;
+    height: 232px;
     
    }
 
@@ -30,6 +30,9 @@
     bottom: 3rem;
     height: 5.5rem;
     border-bottom: 5px solid blue;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     h5{
         @extend .display-m-24-;
     }
