--- a/src/component/_Bannersec.scss
+++ b/src/component/_Bannersec.scss
@@ -1,8 +1,8 @@
 
-.container{
-    padding-left: 12rem;
-    padding-right: 12rem;
-}
+// .container{
+//     padding-left: 1.5em;
+//     padding-right: 1.5em;
+// }
 .bannerleft-first{
     text-align: left;
     padding: 4.5rem 0;;
@@ -17,8 +17,8 @@
     }
     p{
         @extend .regular-heading-m-16-;
-        
-        margin: 0.5rem 0 1.5rem;
+        line-height: 23px;
+        margin: 0.5rem 0 0 0;
     }
     img{
         top: 2808px;
@@ -31,25 +31,23 @@
 
 .shopC{
     @extend .regular-heading-s-14-;
-    color: $primary-brand;
+    color: #1F39FF;
     background-color: white;
-    border:2px solid $primary-brand;
-    margin: 1rem;
-   
-    width: 14rem;
-    padding: 0.5em;
+    border: 2px solid #1F39FF;
+    width: 15rem;
+    padding: 0.75rem;
     border-radius: 0.5em;
-    margin: 3rem 0 1.5rem;
+    margin: 1.5em 3.5em 3em 0;
 }
 .shopN{
     @extend .regular-heading-s-14-;
     color: white;
     background-color: $primary-brand;
     border: white;
-    width: 14rem;
-    padding: 0.5em;
+    width: 15rem;
+    padding: 0.75rem;
     border-radius: 0.5em;
-    margin: 1rem;
+    margin: 1.5em 0 3em 0;
    
 }
 
@@ -60,9 +58,11 @@
 }
 .bannerleft-sec {
     img{
+        max-width: 100%;
         width: 100%;
-
-        
+        height: 600px;
+        object-fit: cover;
+        object-position: top;
     }
 
 
